<resources>
    <string name="app_name">ProyectoClase</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenna">Contraseña</string>
    <string name="login">Login</string>
    <string name="correo">Email</string>
    <string name="rep_contrasenna">Repetir Contraseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ajustes</string>
    <string name="log_off">Salir</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_primera">PrimeraActivity</string>
    <string name="profile">Perfil</string>
    <string name="search">Buscar</string>
    <string name="registrate">Registrate</string>
    <string name="password_forgotten">¿Has olvidado la contraseña?</string>
</resources>